Fix scrollbar bug

--- a/src/VisAQ.css
+++ b/src/VisAQ.css
@@ -140,6 +140,7 @@ div#map-row {
     flex: 1;
     padding: 0;
     border: none;
+    overflow: hidden;
 }
 
 .leaflet-bottom.leaflet-right {
